test/sema/negative/constrain_check.impala
fn get_direction(dir: i32, body: fn(i64) -> ()) -> () {
    (|a| body(a)) (1)
}
