test/sema/negative/constrain_check.output
constrain_check.impala:2 col 15: error: incompatible types: 'i32' and 'i64' found as argument type
